Add test to parse incoming assertion XML data